--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,45 +11,22 @@
 <body>
     <header>
         <nav>
-        <ul class="nav nav-tabs justify-content-center">
-            <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="pages/shop.html">Shop</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="pages/contacto.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="pages/historial.html">Historial</a>
-            </li>
-        </ul>
+            <ul class="nav nav-tabs justify-content-center">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/shop.html">Shop</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/historial.html">Historial</a>
+                </li>
+            </ul>
         </nav>
-        <!-- <nav>
-            <div class="buscador">LOGO            
-                <input type="text" name="buscador" size="40">
-                <input type="submit" value="Buscar">
-            </div>
-            <div class="lista">
-                <ul>
-                    <li>
-                        <a href="index.html">Inicio-contacto</a>
-                    </li>
-                    <li>
-                        <a href="pages/shop.html">Shop,contacto</a>
-                    </li>
-                    <li>
-                        <a href="pages/contacto.html">Contacto</a>
-                    </li>
-                    <li>
-                        <a href="pages/historial.html">Historial</a>
-                    </li>
-                </ul>
-            </div>
-        </nav> -->
     </header>
-    
     <main>
         <div class="div-main">
             <h1>Catalogo</h1>
@@ -60,14 +37,17 @@
             <img width="200px" height="200px" src="Imagenes/Campera1.jpg">
         </div>
     </main>
-
-
-
-
-
-
-
-
+    <footer>
+        <div class="footer">
+            <h2>Contactos</h2>
+            <div class="shadow-none p-3 mb-5 bg-light rounded">Teléfono: +54(011) 38238476</div>
+            <div class="shadow-sm p-3 mb-5 bg-body rounded">Av. Siempre Viva 742</div>
+            <div class="shadow p-3 mb-5 bg-body rounded">Argentina, Buenos Aires</div>
+            <div class="shadow-lg p-3 mb-5 bg-body rounded">
+                <a href="lucaslemos44@gmail.com">lucaslemos44@hotmail.com</a>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
