--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,64 +13,21 @@
         <nav>
             <ul class="nav nav-tabs justify-content-center">
                 <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="shop.html">Shop</a>
+                    <a class="nav-link" href="shop.html">Shop</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link active" href="contacto.html">Contacto</a>
+                    <a class="nav-link active" href="contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="historial.html">Historial</a>
+                    <a class="nav-link" href="historial.html">Historial</a>
                 </li>
             </ul>
-            </nav>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!-- <nav>
-            <div class="buscador">LOGO            
-                <input type="text" name="buscador" size="40">
-                <input type="submit" value="Buscar">
-            </div>
-    
-            <div class="lista">
-                <ul>
-                    <li>
-                        <a href="../index.html">Inicio</a>
-                    </li>
-                    <li>
-                        <a href="shop.html">Shop</a>
-                    </li>
-                    <li>
-                        <a href="contacto.html">Contacto</a>
-                    </li>
-                    <li>
-                        <a href="historial.html">Historial</a>
-                    </li>
-                </ul>
-            </div>
-        </nav> -->
-
+        </nav>
     </header>
     <main>
-
-
-    </main>
-    <footer>
         <div class="form">
             <form action="ejemplo" >
                 <p>Nombre y Apellido: 
@@ -86,9 +43,9 @@
                 <p>Acepta los terminos y condiciones?
                     <input type="checkbox" value="Condiciones">
                 </p>
-                <h3>Comentario</h3>
+                    <h3>Comentario</h3>
                 <p>
-                    <textarea name="comentario"  cols="150" rows="20" placeholder="Escriba su comentario" ></textarea>
+                    <textarea name="comentario"  cols="50%" rows="10%" placeholder="Escriba su comentario" ></textarea>
                 </p>
                 <p>
                     <input type="submit" value="Enviar">
@@ -96,13 +53,18 @@
                 </p>
             </form>
         </div>
+    </main>
+    <footer>
+        <div class="footer">
+            <h2>Contactos</h2>
+            <div class="shadow-none p-3 mb-5 bg-light rounded">Teléfono: +54(011) 38238476</div>
+            <div class="shadow-sm p-3 mb-5 bg-body rounded">Av. Siempre Viva 742</div>
+            <div class="shadow p-3 mb-5 bg-body rounded">Argentina, Buenos Aires</div>
+            <div class="shadow-lg p-3 mb-5 bg-body rounded">
+                <a href="lucaslemos44@gmail.com">lucaslemos44@hotmail.com</a>
+            </div>
+        </div>
     </footer>
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-
-
-
 </body>
 </html>
