--- a/pages/historial.html
+++ b/pages/historial.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,21 +13,20 @@
         <nav>
             <ul class="nav nav-tabs justify-content-center">
                 <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="shop.html">Shop</a>
+                    <a class="nav-link" href="shop.html">Shop</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                    <a class="nav-link" href="contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link active" href="historial.html">Historial</a>
+                    <a class="nav-link active" href="historial.html">Historial</a>
                 </li>
             </ul>
-            </nav>
+        </nav>
     </header>
-
     <main>
         <section>
             <h3>Visto ultimamente</h3>
@@ -38,8 +37,17 @@
             <img width="200px" height="200px" src="../Imagenes/Campera1.jpg">
         </div>
     </main>
-
+    <footer>
+        <div class="footer">
+            <h2>Contactos</h2>
+            <div class="shadow-none p-3 mb-5 bg-light rounded">Teléfono: +54(011) 38238476</div>
+            <div class="shadow-sm p-3 mb-5 bg-body rounded">Av. Siempre Viva 742</div>
+            <div class="shadow p-3 mb-5 bg-body rounded">Argentina, Buenos Aires</div>
+            <div class="shadow-lg p-3 mb-5 bg-body rounded">
+                <a href="lucaslemos44@gmail.com">lucaslemos44@hotmail.com</a>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
 </body>
 </html>
