--- a/pages/shop.html
+++ b/pages/shop.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,28 +13,27 @@
         <nav>
             <ul class="nav nav-tabs justify-content-center">
                 <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link active" href="shop.html">Shop</a>
+                    <a class="nav-link active" href="shop.html">Shop</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                    <a class="nav-link" href="contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="historial.html">Historial</a>
+                    <a class="nav-link" href="historial.html">Historial</a>
                 </li>
             </ul>
-            </nav>
+        </nav>
     </header>
     <main>
         <div class="div-main">
-            
             <h1 class="shop">Shop</h1>
-            <p class="gradiante">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam obcaecati nobis blanditiis, doloribus vero, voluptates commodi quos accusantium velit nemo quasi dignissimos, odit magni inventore labore reprehenderit mollitia officia fugiat ipsa iste. Debitis vero dolorum eveniet nobis reprehenderit tempore incidunt rerum rem necessitatibus ipsa. At laboriosam neque autem explicabo tempore ducimus libero veritatis aspernatur error vel amet beatae ut fugiat ea, deserunt nemo labore excepturi a, quam sapiente exercitationem corporis iste eveniet nam. Quisquam ipsam labore quaerat mollitia dicta maxime non officia voluptate deserunt, accusamus voluptatem, ut, blanditiis rem aliquid laborum. Accusantium cumque velit, ipsum, eaque error quidem libero fugiat doloremque hic fugit, architecto quibusdam eius magnam? Id modi facere natus quaerat repellat maiores rerum assumenda dolor optio! Reprehenderit asperiores est placeat vitae quos esse quia! Soluta magni, officia alias, cumque modi iure obcaecati ad accusamus odit deserunt animi ex ipsa! Odio quidem vero perferendis error quos hic nisi dolorem?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam obcaecati nobis blanditiis, doloribus vero, voluptates commodi quos accusantium velit nemo quasi dignissimos, odit magni inventore labore reprehenderit mollitia officia fugiat ipsa iste. Debitis vero dolorum eveniet nobis reprehenderit tempore incidunt rerum rem necessitatibus ipsa. At laboriosam neque autem explicabo tempore ducimus libero veritatis aspernatur error vel amet beatae ut fugiat ea, deserunt nemo labore excepturi a, quam sapiente exercitationem corporis iste eveniet nam. Quisquam ipsam labore quaerat mollitia dicta maxime non officia voluptate deserunt, accusamus voluptatem, ut, blanditiis rem aliquid laborum. Accusantium cumque velit, ipsum, eaque error quidem libero fugiat doloremque hic fugit, architecto quibusdam eius magnam? Id modi facere natus quaerat repellat maiores rerum assumenda dolor optio! Reprehenderit asperiores est placeat vitae quos esse quia! Soluta magni, officia alias, cumque modi iure obcaecati ad accusamus odit deserunt animi ex ipsa! Odio quidem vero perferendis error quos hic nisi dolorem?</p>
         </div>
         <div>
-            <table border="2"> 
+            <table border="2" class="border"> 
                 <tr>
                     <th>ADIDAS</th>
                     <th>NIKE</th>
@@ -60,7 +59,17 @@
             </table>
         </div>
     </main>
-
+    <footer>
+        <div class="footer">
+            <h2>Contactos</h2>
+            <div class="shadow-none p-3 mb-5 bg-light rounded">Teléfono: +54(011) 38238476</div>
+            <div class="shadow-sm p-3 mb-5 bg-body rounded">Av. Siempre Viva 742</div>
+            <div class="shadow p-3 mb-5 bg-body rounded">Argentina, Buenos Aires</div>
+            <div class="shadow-lg p-3 mb-5 bg-body rounded">
+                <a href="lucaslemos44@gmail.com">lucaslemos44@hotmail.com</a>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
