--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,6 +3,8 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/prueba.css">
+    <meta name="description" content="Enlaces para poder hacer tus consultas">
+    <meta name="keywords"  content="Telefeono, Correo, Direccion">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,6 +25,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="historial.html">Historial</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="informacion.html">Informacion</a>
                 </li>
             </ul>
         </nav>
