--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -14,6 +14,7 @@
 <body>
     <header>
         <nav>
+            <label class="logo">SportY</label>
             <ul class="nav nav-tabs justify-content-center">
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
@@ -33,5 +34,25 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div>
+            <h1>Informacion</h1>
+            <p>Informacion de la pagina en lo que es, que se plantea, de como surgio y a que objetivo apunta</p>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi, cumque illum natus architecto sed eligendi placeat ad veritatis minima alias corporis, quis labore ducimus, velit illo voluptates fugit? Tempore, molestias dolorem doloribus beatae voluptate itaque deleniti distinctio quibusdam. Aperiam in magni reiciendis quidem iusto quibusdam consectetur assumenda maiores voluptatum, nulla nam illum, exercitationem modi. Provident perferendis officia voluptatum doloribus, cupiditate saepe alias, explicabo facere quas ullam esse aliquid laborum eius culpa at itaque, reiciendis quisquam vel quaerat nam! Dolor reprehenderit similique, doloribus suscipit incidunt unde accusantium natus aspernatur repellat pariatur modi, cupiditate eligendi magni nostrum debitis cumque. Eos neque tempore quam, nemo labore delectus amet a facilis facere officiis iste quasi. Sunt mollitia, eligendi, in culpa laudantium reprehenderit quae distinctio consequatur explicabo minima deleniti facilis aspernatur necessitatibus, accusantium nostrum vitae sapiente cupiditate earum itaque ex debitis eveniet maiores perspiciatis? Eveniet, aliquid. Veritatis eligendi est totam et cumque? Doloremque quos voluptatem quia ipsam fugiat iure accusamus, alias aut earum mollitia aspernatur ipsum. Non est possimus tenetur molestiae repellat sunt officiis et voluptatum earum quisquam voluptatem ipsum, consequuntur quae natus assumenda aut deleniti ullam voluptas facilis. Blanditiis dignissimos ipsa a mollitia id culpa corrupti qui consectetur laudantium? Harum possimus incidunt veniam quaerat mollitia inventore illum autem, ab eos, commodi ipsum laborum eaque, nobis saepe expedita voluptate. Quae eius quibusdam voluptate esse reprehenderit, accusamus voluptatibus earum dignissimos, vero qui vitae asperiores nemo eligendi eveniet illo voluptatum quaerat natus doloribus ipsam molestias officiis. Vero ea nobis exercitationem adipisci, similique pariatur repellendus aut ab eum maxime aliquid neque. Amet voluptate harum ea ad nemo dolore, magni atque eos esse cum enim similique, id consequatur perferendis praesentium debitis assumenda, voluptatum animi cupiditate illo. Eligendi quidem molestiae aspernatur. Sint vel eaque nam, neque aspernatur adipisci mollitia, ullam architecto rem magnam tempore accusamus ipsum ad, temporibus consequatur distinctio.
+            </p>
+        </div>
+    </main>
+    <footer>
+        <div class="footer">
+            <h2>Contactos</h2>
+            <div class="shadow-none p-3 mb-5 bg-light rounded">Teléfono: +54(011) 38238476</div>
+            <div class="shadow-sm p-3 mb-5 bg-body rounded">Av. Siempre Viva 742</div>
+            <div class="shadow p-3 mb-5 bg-body rounded">Argentina, Buenos Aires</div>
+            <div class="shadow-lg p-3 mb-5 bg-body rounded">
+                <a href="lucaslemos44@gmail.com">lucaslemos44@hotmail.com</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
