--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <nav>
+            <label class="logo">SportY</label>
             <ul class="nav nav-tabs justify-content-center">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
@@ -40,6 +41,8 @@
             <img width="200px" height="200px" src="Imagenes/Campera1.jpg">
             <img width="200px" height="200px" src="Imagenes/Campera1.jpg">
             <img width="200px" height="200px" src="Imagenes/Campera1.jpg">
+        </div>
+        <div>
         </div>
     </main>
     <footer>
