--- a/pages/historial.html
+++ b/pages/historial.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <nav>
+            <label class="logo">SportY</label>
             <ul class="nav nav-tabs justify-content-center">
                 <li class="nav-item">
                     <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
